python-qprogedit (1.2.1-ubuntu1) saucy; urgency=low

  * Don't assume that pyflakes accepts builtins keyword (#6)

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Tue, 11 Mar 2014 17:08:19 +0100

python-qprogedit (1.2.0-ubuntu1) saucy; urgency=low

  * Zoom on scroll

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Mon, 10 Mar 2014 16:38:20 +0100

python-qprogedit (1.1.0-ubuntu1) saucy; urgency=low

  * Auto-fix space-based indentation
  * Use Python lexer for OpenSesame script

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Mon, 03 Mar 2014 18:59:42 +0100

python-qprogedit (1.0.0-ubuntu1) saucy; urgency=low

  * Better implementation of focus-out handler

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Thu, 02 Jan 2014 17:23:26 +0100

python-qprogedit (0.3.1-ubuntu1) saucy; urgency=low

  * Add missing options to specify Python builtins to pyflakes

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Thu, 12 Dec 2013 17:11:22 +0100

python-qprogedit (0.3.0-ubuntu1) saucy; urgency=low

  * Add content validation using pyflakes
  * Do not get confused by capitalization in source language

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Thu, 12 Dec 2013 16:48:49 +0100

python-qprogedit (0.2.0-ubuntu1) saucy; urgency=low

  * Improved and configurable block (un)commenting

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Tue, 10 Dec 2013 12:36:31 +0100

python-qprogedit (0.1.4-ubuntu1) saucy; urgency=low

  * Do not crash when an empty string is specified as colorScheme

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Wed, 13 Nov 2013 18:10:43 +0100

python-qprogedit (0.1.3-ubuntu1) saucy; urgency=low

  * Focus find box when toggled

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Mon, 11 Nov 2013 18:02:01 +0100

python-qprogedit (0.1.2-ubuntu1) saucy; urgency=low

  * Minor bugfixes

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Wed, 30 Oct 2013 14:54:18 +0100

python-qprogedit (0.1.1-ubuntu1) saucy; urgency=low

  * Minor bugfixes

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Tue, 29 Oct 2013 20:50:48 +0100